added distinct match ranks route
